--- a/supervised_clustering.ipynb
+++ b/supervised_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "ipD08B5pwn5g"
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "NhNgPIWWxTHC"
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -51,57 +51,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 1 1 0]\n",
-      "Normalized values: [[-0.22415379  0.9824532  -1.04207291  1.98257619  0.06676293]\n",
-      " [-1.58785224  0.05736811 -1.20699088  0.52904362 -1.32008552]\n",
-      " [-0.1340121  -1.16095211 -0.53462852  1.43142326  0.15772313]\n",
-      " [ 0.72105361  0.16500347 -0.75299928  1.15135094  0.88530279]\n",
-      " [-0.20877131 -0.45843592  1.61777696 -1.55294256  0.37115795]\n",
-      " [-0.99567112 -0.16649615 -1.09058117  2.03123517 -0.86625139]\n",
-      " [ 1.13704369  0.25487417 -0.91235904 -0.59792545  2.23599801]\n",
-      " [-1.13456187  1.237676    1.99217237  1.48278643 -0.09784065]\n",
-      " [-0.03592978 -0.98125711  0.12459876  0.67808298  1.53652501]\n",
-      " [-0.57448606 -0.32283453 -1.55508666 -0.2201472   0.01771123]\n",
-      " [ 0.02078071 -0.72425963  0.31012189 -1.59367588  1.01687231]\n",
-      " [-0.95269321  0.65927895  0.50063452  0.33306993  1.50585532]\n",
-      " [-0.7793643  -1.27282174  0.73343685  0.56456089 -0.11661656]\n",
-      " [-1.13047342  0.45176466 -0.37835812 -0.19480386  0.90084378]\n",
-      " [ 1.16450001 -0.98860823  0.26526913 -0.70767072  0.01547212]\n",
-      " [-0.04066668  0.05041296 -0.74078938  0.29063971  1.42304425]\n",
-      " [-0.31095738 -0.39365878 -0.06902354  1.03966634  1.27908849]\n",
-      " [ 1.18658735 -1.54899558  0.21615428  1.03158097 -1.21357521]\n",
-      " [ 1.01756889 -0.84799812 -1.44766579  0.00821118 -1.72325008]\n",
-      " [-1.17443422 -1.73445001  0.47495934  1.14639379  0.21546214]\n",
-      " [ 1.74981501 -0.04629638 -1.93147551 -1.29482272 -0.24070726]\n",
-      " [-1.08396695  2.23291618  1.46087976 -1.38253115  0.62009838]\n",
-      " [ 0.81738406 -1.11101949  0.21037544  1.30586807 -0.00896566]\n",
-      " [-0.08386254  1.09419127 -0.20178341 -0.68248892 -0.09039548]\n",
-      " [-0.5980447  -0.62763674  1.69377183  0.18134757 -0.83422552]\n",
-      " [ 1.08609644  0.09635627  1.5622336   0.2934224   0.98012014]\n",
-      " [-0.43315345  0.76401724 -0.63993267 -0.73729522 -2.0709166 ]\n",
-      " [ 0.46270043 -1.27118198 -0.9313483  -1.61183155  0.73870093]\n",
-      " [ 0.2019654  -0.15614588 -1.97673639  0.71436189 -0.73062877]\n",
-      " [-0.72548618  1.2956586   1.54700056 -0.42372278 -0.14023833]\n",
-      " [-0.43909191 -0.38930534  0.31756905 -0.60760298 -0.03920035]\n",
-      " [ 1.20410255 -0.04209369  0.26681897  0.36365074 -0.92807614]\n",
-      " [ 0.84116158  2.1507072  -1.53532934 -1.13947961  0.01291396]\n",
-      " [ 1.40274664 -1.87733618 -0.47869888 -0.49056105  0.52639433]\n",
-      " [-1.71606786 -1.62242951  0.52540237 -1.19369332  0.39228259]\n",
-      " [-0.34455375  0.32009967  1.30972716 -0.04879433  0.19731122]\n",
-      " [-1.44477018  0.17858955  0.10449097 -0.60740289 -0.42289259]\n",
-      " [-0.17034767  0.30322837  0.65638624 -0.90757897 -2.53554629]\n",
-      " [ 0.41941772 -0.33204502 -0.53970854  0.03042516 -0.55251938]\n",
-      " [-0.2703041   0.58206538  0.85478595  0.40550783 -1.71134615]\n",
-      " [ 1.97786912  0.46791928 -1.7536236  -1.06355941 -1.5035205 ]\n",
-      " [ 0.02042289 -0.86069239  0.7040638   1.6219471  -1.32894618]\n",
-      " [-0.995854    1.00715848  0.22762524  0.7319621   0.95717553]\n",
-      " [ 1.83656491  0.50755899  0.29537143  1.08067818 -0.23279688]\n",
-      " [ 1.39147572  1.4664483   0.16712954 -1.19210761  0.04697495]\n",
-      " [-1.80179957  1.26060383  0.87391809  0.09231373  0.56554702]\n",
-      " [-1.33116895  1.7049319  -0.45081308 -1.66115072  0.86381602]\n",
-      " [ 0.10886559  0.00654457  1.32299187 -0.74979764  1.35553291]\n",
-      " [ 0.45027565  0.92180067 -0.19188675 -0.63706927 -0.4884477 ]\n",
-      " [ 1.50410133 -1.28267676  0.02622582  0.77654965  0.31230177]]\n",
+      "[0 0 1 1 1]\n",
+      "Normalized values: [[ 4.49119696e-01 -2.09623176e-01  1.43693278e-01  1.13788477e+00\n",
+      "   5.25141447e-01]\n",
+      " [ 7.11299445e-01  6.52586651e-01  2.58289655e-01  4.27311405e-01\n",
+      "   8.96039095e-02]\n",
+      " [-5.34399947e-03  3.62987796e-01  1.02915172e+00 -6.37290570e-01\n",
+      "  -5.72571290e-01]\n",
+      " [-1.02817507e-01 -8.89865678e-02  7.00172825e-01  5.41529135e-01\n",
+      "   6.75065458e-01]\n",
+      " [-2.45289043e+00 -1.54961552e-01  1.72871889e+00 -5.61043443e-01\n",
+      "  -7.31750798e-01]\n",
+      " [-1.05050861e+00 -8.00347616e-01 -3.56648086e-01 -1.10194640e+00\n",
+      "  -9.32964520e-01]\n",
+      " [ 1.39007865e+00 -1.23944721e+00  9.71957629e-01  1.01657811e+00\n",
+      "  -4.69133660e-02]\n",
+      " [-3.62460835e-01 -5.91294448e-01 -9.02007640e-01 -1.30687400e-02\n",
+      "   6.25907687e-01]\n",
+      " [-1.27363403e+00 -2.68146728e-01  4.67324739e-01  9.34068145e-01\n",
+      "   1.32575259e-01]\n",
+      " [-1.97546638e+00 -1.14465325e+00 -1.92367109e+00  7.63434485e-01\n",
+      "   6.35366244e-01]\n",
+      " [ 1.15491633e+00  3.68702698e-04  1.06283349e+00  4.62687007e-01\n",
+      "   1.75300051e+00]\n",
+      " [ 4.76198177e-02  3.72725422e-01 -1.29962268e+00  1.38005450e+00\n",
+      "  -1.10454016e-01]\n",
+      " [ 2.51394895e+00 -6.88552062e-01 -2.55570125e-01  7.08175154e-02\n",
+      "  -1.80178896e-01]\n",
+      " [ 2.68259663e-02  9.07323797e-01 -1.32559670e+00 -1.26590901e+00\n",
+      "  -2.38300913e+00]\n",
+      " [ 2.35943071e+00  3.38198746e-01  4.66872840e-02  3.68255973e-02\n",
+      "  -3.07980375e-01]\n",
+      " [ 2.11663662e+00 -3.48939150e-01 -6.90402748e-01  8.48327108e-01\n",
+      "  -3.55676772e-01]\n",
+      " [-1.04126798e+00  5.68754560e-01  1.23468211e+00  6.62109171e-01\n",
+      "  -2.25652600e+00]\n",
+      " [ 8.51868674e-01  2.13913673e-01 -5.20194182e-01  7.13412990e-02\n",
+      "   1.09278985e+00]\n",
+      " [ 9.62418407e-01  7.03461983e-01 -9.10713129e-01 -7.75514092e-01\n",
+      "   1.18856250e+00]\n",
+      " [ 7.38759899e-01 -5.41973481e-01 -6.02047342e-01 -8.19197784e-01\n",
+      "   1.51599048e+00]\n",
+      " [ 2.24950471e-02  1.70189941e+00 -7.07188860e-01  2.37086391e+00\n",
+      "   6.98148732e-01]\n",
+      " [-5.33511396e-01  6.79444994e-01  6.90413998e-01  1.44659227e-01\n",
+      "  -1.28828909e+00]\n",
+      " [-5.51930436e-01  1.39363032e+00  2.27357881e-01 -9.96003368e-01\n",
+      "   1.45236217e-01]\n",
+      " [-1.98314420e-01  1.71052565e-01  1.36052589e+00 -6.11652502e-01\n",
+      "  -2.17461881e-01]\n",
+      " [-1.61147788e-01 -2.37456416e+00  9.03260318e-01 -1.31713858e+00\n",
+      "  -2.15580912e+00]\n",
+      " [-4.32879274e-01 -1.17743968e+00 -5.50369595e-01  6.90681865e-01\n",
+      "   8.37904362e-01]\n",
+      " [-7.47996013e-01 -1.44873750e-01 -9.67210371e-01 -2.45566789e-01\n",
+      "   9.10761299e-01]\n",
+      " [ 1.28318597e+00  1.06475296e+00 -9.38048170e-01  5.15116997e-01\n",
+      "   9.53986029e-01]\n",
+      " [ 6.82659884e-01 -1.47199257e-01  9.40767738e-01  6.99364377e-01\n",
+      "  -1.78166090e-01]\n",
+      " [-6.17045034e-01  2.18655390e+00 -9.02562972e-01  1.35251862e+00\n",
+      "   1.47935251e-01]\n",
+      " [ 2.25892719e-01  7.00128817e-01 -1.61090921e-01  5.04295035e-01\n",
+      "  -6.58169336e-01]\n",
+      " [-1.22284272e+00 -2.00312844e+00 -3.80464222e-01 -2.09892816e+00\n",
+      "  -4.87132195e-01]\n",
+      " [-3.57357097e-02 -1.83935404e-01  8.26259883e-01 -2.65187827e+00\n",
+      "   6.26746540e-01]\n",
+      " [-1.15856687e+00 -1.17810715e+00  2.00668405e+00  2.55255391e-01\n",
+      "   1.78933133e+00]\n",
+      " [ 8.69825899e-01 -4.18167487e-01  5.91535265e-01  1.71130855e-01\n",
+      "   1.03598530e-01]\n",
+      " [-3.00065538e-02  2.83107499e+00 -6.09131943e-01 -1.59064150e+00\n",
+      "   1.06286115e+00]\n",
+      " [-1.83491410e+00  5.13961210e-01 -2.65718805e+00  1.39978329e+00\n",
+      "  -9.90754564e-01]\n",
+      " [-6.96377158e-01 -5.79735661e-01  1.11110118e-01 -1.38318066e+00\n",
+      "  -8.00182271e-01]\n",
+      " [ 5.61840732e-01  1.56112138e+00 -7.48872132e-01 -1.13279335e+00\n",
+      "  -1.66822675e-01]\n",
+      " [ 1.07971669e-01  1.32005368e-01  1.07711011e+00 -3.43134777e-02\n",
+      "  -1.14440236e+00]\n",
+      " [-5.18935908e-01 -1.12091015e+00  1.24474738e+00  6.32768296e-02\n",
+      "  -1.33852789e+00]\n",
+      " [ 4.45356971e-01 -2.33570275e-01 -7.93618281e-01  3.14415489e-01\n",
+      "   1.38303933e+00]\n",
+      " [-4.13848616e-01 -9.39508370e-01  1.04218070e+00 -8.54969857e-02\n",
+      "   1.25918947e-01]\n",
+      " [-1.45880307e-01 -5.11429929e-01 -7.10045822e-01  1.24110659e+00\n",
+      "  -5.21629461e-01]\n",
+      " [-1.70292201e-01  1.10695340e+00 -3.79467521e-01 -1.66876130e+00\n",
+      "   8.44453792e-01]\n",
+      " [-1.62939880e-01 -1.48897874e+00  2.08700047e-01 -2.89244680e-01\n",
+      "  -5.83191827e-02]\n",
+      " [ 1.78402804e-01  4.36984791e-01  8.19480932e-01  5.47430740e-01\n",
+      "   1.56694846e+00]\n",
+      " [ 8.38659969e-01  1.60600461e-01  1.35982463e+00 -5.63906322e-01\n",
+      "  -4.87876730e-01]\n",
+      " [ 2.26425000e-03 -8.03678516e-01 -7.55903012e-03  1.50591068e-01\n",
+      "  -1.53224234e+00]\n",
+      " [-6.43924914e-01  6.21666324e-01 -1.75417894e+00  1.07001745e+00\n",
+      "   4.72937032e-01]]\n",
       "standard deviation: [1. 1. 1. 1. 1.]\n"
      ]
     }
@@ -120,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "DQmsG6h72jah"
    },
@@ -131,7 +181,6 @@
     "    y0 = []\n",
     "    y1 = []\n",
     "    for index, j in enumerate(y):\n",
-    "        print(j)\n",
     "        if j == 1:\n",
     "            y1 = np.append(y1 ,index)\n",
     "    \n",
@@ -156,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -165,39 +214,9 @@
     "id": "Z1dh3OHVMpyK",
     "outputId": "f563eb92-945a-4c2b-db7d-f8a054a268a6"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "scoreX,y0,y1 = score(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "def flip_sign(X, score):\n",
-    "    s_max = np.max(score)\n",
-    "    flipped_X = []\n",
-    "    \n",
-    "    for i in range(len(score)):\n",
-    "        if(score[i] > s_max/2):\n",
-    "            X[i] = X[i] * (-1)\n",
-    "\n",
-    "    return X\n",
-    "        \n"
+    "scoreX,y0,y1 = score(X, y)"
    ]
   },
   {
@@ -206,12 +225,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = flip_sign(X, scoreX)"
+    "def flip_sign(X, score):\n",
+    "    score_max = np.max(score)\n",
+    "    \n",
+    "    for i in range(len(score)):\n",
+    "        if(score[i] > score_max/2):\n",
+    "            X[i] = X[i] * (-1)\n",
+    "\n",
+    "    return X\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = flip_sign(X, scoreX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,23 +339,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average_gene(c):\n",
+    "    \n",
+    "    \n",
+    "    eC = np.sum(c['cg'])\n",
+    "    print(eC)\n",
+    "    eC = eC/abs(c['cg'])\n",
+    " \n",
+    "    return eC\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'ie': 38,\n",
-       "  'cg': array([-0.41941772,  0.33204502,  0.53970854, -0.03042516,  0.55251938])}]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1390910660020026\n"
+     ]
     }
    ],
    "source": [
-    "c"
+    "e_c = average_gene(c[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def average_current_cluster(eC, c):\n",
+    "    \n",
+    "    e_Ci = []\n",
+    "    \n",
+    "    for row in X:\n",
+    "        sum_i = row + eC\n",
+    "        e_Ci.append(sum_i/abs(c['cg']+1))\n",
+    " \n",
+    "    return e_Ci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e_Ci = average_current_cluster(e_c, c[0])\n"
    ]
   },
   {
@@ -328,59 +403,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def average_cluster(c):\n",
+    "def winning_gene():\n",
+    "    score_e_Ci, y0, y1 = score(e_Ci, y)\n",
+    "    min_score = np.argmin(score_e_Ci)\n",
     "    \n",
+    "    similar_scores = []\n",
     "    \n",
-    "    C = np.sum(c['cg'])\n",
-    "    C = C/abs(c['cg'])\n",
-    " \n",
-    "    return C\n",
+    "    for i in range(len(score_e_Ci)):\n",
+    "        if (score_e_Ci[i] == min_score):\n",
+    "            similar_scores.append(i)\n",
+    "            \n",
+    "    if (len(similar_scores) > 1):\n",
+    "        pass\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 2.32329257,  2.93463235,  1.80547462, 32.02711354,  1.76361245])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "average_cluster(c[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def average_genes():\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
